--- a/views/index.jade
+++ b/views/index.jade
@@ -6,7 +6,7 @@ block content
     div.clock
       div.time
       div.day
-    div.preirc #kif @ freenode
+    div.preirc #31c3 @ freenode
     div.irc
   script(src='jquery-2.1.1.min.js')
   script(src='moment-with-langs.min.js')
