--- a/static/style.css
+++ b/static/style.css
@@ -70,6 +70,11 @@ div.twitter .tweet .time {
   font-size: 14px;
 }
 
+div.twitter .tweet .name {
+  color: #989898;
+  margin-bottom: 5px;
+}
+
 div.twitter .tweet .name, div.twitter .tweet .text {
   margin-left: 60px;
 }
