--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,6 @@ doctype html
 html
   head
     title Twitterwall
-    link(rel='stylesheet', href='/style.css')
+    link(rel='stylesheet', href='style.css')
   body
     block content
