--- a/views/index.jade
+++ b/views/index.jade
@@ -6,8 +6,8 @@ block content
     div.clock
       div.time
       div.day
-    div.preirc #31c3 @ freenode
-    div.irc
+    div.pretwitter2 Orgatweets
+    div.twitter2
   script(src='jquery-2.1.1.min.js')
   script(src='moment-with-langs.min.js')
   script(src='socket.io/socket.io.js')
